[package]
name = "fiducial"
version = "0.1.0"
authors = ["Ben Wang <wangben3@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
rayon = "1.3.0"
minifb = "0.19"

[dependencies]
eye = {git = "https://github.com/raymanfx/eye-rs", rev = "04469665b6cc698d668cf63bc1d944576bd1be2b", features = ["hal-uvc"]}
image = "0.22.0"
imageproc = "0.19.0"
euclid = "0.20.10"
lazy_static = "1.4.0"
rusttype = "0.8.2"
approx = "0.3.2"
arrsac = "0.3.0"
rand = { version = "0.7.3", features = ["small_rng"] }
itertools = "0.9.0"
arraymap = "0.1.1"
cv-pinhole = "0.1.1"
cv-core = "0.10.0"
lambda-twist = "0.2.0"
nalgebra = "0.21.0"
opencv = { version = "0.36.0", default-features = false, features = ["opencv-4"]}